# XPF

./: .gitignore  README.md
Source/: CMakeLists.txt  ERROR.csv  PRO.pri  XPF.pri  XPF.pro  copy_file.bat  error.csv  project.pro
Source/Config/: XPF.xml  XPFPlugins.xml
Source/Config/XPFUi/: screen0.xml
Source/IR/: IR.pro
Source/IR/IRAccountManagerPlugin/: AccountManagerServiceImpl.cpp  AccountManagerServiceImpl.h  DataHandler.cpp  DataHandler.h  IAccountManagerService.h  IRAccountDataHandler.cpp  IRAccountDataHandler.h  IRAccountManagerPlugin.cpp  IRAccountManagerPlugin.h  IRAccountManagerPlugin.pro  IRAccountManagerPluginResource.qrc
Source/IR/IRAccountManagerPlugin/Widgets/: IR_LoginWgt.cpp  IR_LoginWgt.h  IR_LoginWgt.ui
Source/IR/IRDataBaseManagerPlugin/: IRDataBaseManagerPlugin.cpp  IRDataBaseManagerPlugin.h  IRDataBaseManagerPlugin.pro  UserDbManager.cpp  UserDbManager.h
Source/IR/IRDevicePortManagerPlugin/: CMakeLists.txt  IRDevicePortDataHandler.cpp  IRDevicePortDataHandler.h  IRDevicePortManagerPlugin.cpp  IRDevicePortManagerPlugin.h  IRDevicePortManagerPlugin.pro  TestSerialPortReciver.cpp  TestSerialPortReciver.h  TestSerialPortSender.cpp  TestSerialPortSender.h
Source/IR/IRDevicePortManagerPlugin/Widgets/: IR_TestMain.cpp  IR_TestMain.ui
Source/IR/IRFingerManagerPlugin/: DataHandler.cpp  DataHandler.h  IRAccountManagerPlugin.cpp  IRAccountManagerPlugin.pro
Source/IR/IRFingerManagerPlugin/Widgets/: IR_LoginWgt.cpp  IR_LoginWgt.h  IR_LoginWgt.ui  IR_TestMain.h
Source/IR/IRMenuHeaderPlugin/: IRMenuHeaderDataHandler.cpp  IRMenuHeaderDataHandler.h  IRMenuHeaderPlugin.cpp  IRMenuHeaderPlugin.h  IRMenuHeaderPlugin.pro  IRMenuHeaderPluginResource.qrc
Source/IR/IRMenuHeaderPlugin/Widgets/: IR_MenuHeaderWgt.cpp  IR_MenuHeaderWgt.h  IR_MenuHeaderWgt.ui  (+1 more)
Source/IR/IRSettingUiPlugin/: IRSettingDataHandler.cpp  IRSettingDataHandler.h  IRSettingUiPlugin.cpp  IRSettingUiPlugin.h  IRSettingUiPlugin.pro  IRSettingUiResource.qrc
Source/IR/IRTestMainPagePlugin/: IRTestMainDataHandler.cpp  IRTestMainDataHandler.h  IRTestMainPagePlugin.cpp  IRTestMainPagePlugin.h  IRTestMainPagePlugin.pro
Source/Plugins/: CMakeLists.txt  Plugins.pri  Plugins.pro
Source/Style/: XPF.qss
Source/XPF/: CMakeLists.txt  XPF.pri  XPF.pro
Source/XPF/Include/: IXPFConfigException  IXPFErrorException  IXPFPluginHelper  IXPFService  XPFCoreConfigDef  XPFTrayMenuTopicDef
Source/XPF/XPFConfigs/: CMakeLists.txt  XPFConfigExceptionImpl.cpp  XPFConfigExceptionImpl.h  XPFConfigServiceImpl.cpp  XPFConfigServiceImpl.h  XPFConfigs.pro  XPFConfigsPlugin.cpp  XPFConfigsPlugin.h  XPFCoreConfigurator.cpp  XPFCoreConfigurator.h
Source/XPF/XPFCore/: CMakeLists.txt  CrashException.h  XPFCore.cpp  XPFCore.h  XPFCore.pro  XPFGlobal.cpp  XPFPluginHelperImpl.cpp  XPFPluginHelperImpl.h  main.cpp
Source/XPF/XPFDbServicePlugin/: CMakeLists.txt  SqlResult.cpp  SqlResult.h  SqlResultPrivate.cpp  XPFDbServiceFacrtoryImpl.cpp  XPFDbServiceFacrtoryImpl.h  XPFDbServiceImpl.cpp  XPFDbServiceImpl.h  XPFDbServiceImplPrivate.cpp  XPFDbServiceImplPrivate.h  XPFDbServiceObject.cpp  XPFDbServiceObject.h  XPFDbServicePlugin.cpp  XPFDbServicePlugin.h  XPFDbServicePlugin.pro  XPFDbServiceWorker.cpp  XPFDbServiceWorker.h  XPFDbSyncServiceImpl.cpp  XPFDbSyncServiceImpl.h
Source/XPF/XPFHelper/: XPFHelper.pro  XPFPluginHelperImpl.cpp  XPFPluginHelperImpl.h
Source/XPF/XPFLauncher/: XPFLauncher.pro  main.cpp
Source/XPF/XPFTrayMenuPlugin/: CMakeLists.txt  XPFTrayMenuPlugin.cpp  XPFTrayMenuPlugin.h  XPFTrayMenuPlugin.pro
Source/XPF/XPFUi/: CMakeLists.txt  XPFUi.pro  XPFUiPlugin.cpp  XPFUiPlugin.h  XPFUiTool.cpp  XPFUiTool.h
Source/XPF/i_t/: ISqlResult  IXPFConfigService  IXPFConfigurator  IXPFDbSyncService  IXPFPluginHelper  XPFGlobal
Source/XPF/include/: IXPFPlugin  XPFCoreTopicDef  XPFUiTopicDef
Source/XPFConfigs/: XPFConfigs.pro  XPFConfigsPlugin.cpp  XPFConfigsPlugin.h
Source/XPFCore/: CMakeLists.txt  XPF  XPFCore.cpp  XPFCore.h  XPFCore.pro  XPFGlobal.cpp  XPFPluginHelperImpl.cpp  XPFPluginHelperImpl.h  main.cpp
Source/XPFCore/Private/: MessageSenderPrivate.cpp  MessageSenderPrivate.h  XPFPluginHelperImplPrivate.cpp  XPFPluginHelperImplPrivate.h
Source/XPFDbService4SqlitePlugin/: SqlResult.cpp  XPFDbService4SqlitePlugin.cpp  XPFDbService4SqlitePlugin.pro  XPFDbServiceImpl.cpp  XPFDbServiceImpl.h
Source/XPFDbServicePlugin/: IXPFDbService.h  IXPFDbServiceFactory.h  IXPFDbServiceObj.h  SqlResult.cpp  SqlResult.h  SqlResultPrivate.cpp  SqlResultPrivate.h  XPFDbServiceFacrtory.cpp  XPFDbServiceFacrtory.h  XPFDbServiceFacrtoryImpl.cpp  XPFDbServiceFacrtoryImpl.h  XPFDbServiceImpl.cpp  XPFDbServiceImpl.h  XPFDbServiceImplPrivate.cpp  XPFDbServiceImplPrivate.h  XPFDbServicePlugin.cpp  XPFDbServicePlugin.h  XPFDbServicePlugin.pro  XPFDbServiceWorker.cpp  XPFDbServiceWorker.h  XPFDbSyncServiceImpl.cpp  XPFDbSyncServiceImpl.h
Source/XPFLauncher/: CMakeLists.txt  Makefile  XPFLauncher.vcxproj  XPFLauncher.vcxproj.filters  cmake_install.cmake  main.cpp
Source/XPFLoginPlugin/: XPFLoginPlugin.cpp  XPFLoginPlugin.h  XPFLoginPlugin.pro
Source/XPFTrayMenu/: CMakeLists.txt  XPFTrayMenuPlugin.cpp
Source/XPFTrayMenu/Widgets/: TrayIconRClickWgt.ui
Source/XPFTrayMenuPlugin/: Makefile  Makefile.Debug  Makefile.Release  XPFTrayMenuPlugin.cpp  XPFTrayMenuPlugin.h  XPFTrayMenuPlugin.pro
Source/XPFTrayMenuPlugin/Widgets/: TrayIconRClickWgt.cpp  TrayIconRClickWgt.h
Source/XPFUi/: XPFUi.pro  XPFUiPlugin.cpp  XPFUiPlugin.h  XPFUiPluin.cpp  XPFUiPluin.h  XPFUiTool.cpp  XPFUiTool.h
Source/XPF_DBS_Sqlite_Plugin/: XPFLoginPlugin.cpp  XPFLoginPlugin.h
Source/c_t/: XPFPlugins.xml
Source/config/: XPF.xml  XPFPlugins.xml
Source/config/XPFUi/: screen0.xml
Source/include/: IXPFPlugin.h  IXPFPluginHelper.h  IXPFService.h  Singleton.h  XPFDef.h
Source/include/Define/: IRTopicDef.h  XPFCoreDef.h  XPFTopicDef.h  XPFTrayMenuPluginDef.h
Source/include/IR/: IRMathTool.h  IRTestParamDefine.h
Source/include/Service/: ISqlResult  IXPFDbService  IXPFDbServiceFactory
Source/interface/: IXPFHelper.h  IXPFPlugin.h
(+62 files in other folders)
